basealignment fixed

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -63,10 +63,23 @@
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-  font-family: 'Roboto', sans-serif
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 20px;
 }
 
 .g-text {
   font-size: 16px;
-  font-family: 'Roboto', sans-serif
+  font-family: 'Roboto', sans-serif;
+  margin-right: 16px;
+}
+
+.g-info {
+  margin-left: 16px;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 20px;
+}
+
+.guide-table th, .guide-table td {
+  padding: 0px;
 }
